# pdfsigner

./: DESCRIPTION  MD5  README.md
src/: Makevars.in
src/rust/: Cargo.toml
src/rust/pdf_signer/: Cargo.toml
src/rust/pdf_signer/src/: appearance.rs  crypto.rs  dss.rs  error.rs  incremental.rs  lib.rs  policy.rs  sign.rs  testkit.rs  trust.rs  tsa.rs  util.rs  verify.rs
