# Vendored copy of the standalone `pdf_signer` crate
# (github.com/StrategicProjects/pdf_signer), library target only.
# Keep in sync with that repo until it is published to crates.io.
[package]
name = "pdf_signer"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Sign PDF documents with a PKCS#12 keystore and verify their signatures."
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "pdf_signer"
crate-type = ["lib"]

# NOTE: the standalone crate also builds a `pdf_signer` CLI binary (src/main.rs,
# clap). It is intentionally omitted here — the R package links the library only,
# so neither main.rs nor the clap dependency is vendored.

[dependencies]
lopdf = "0.36"
thiserror = "2"
flate2 = "1"
# Richer visible appearances: embedded TrueType fonts and PNG/JPEG logos.
ttf-parser = "0.25"
png = "0.18"

# Pure-Rust crypto stack (no OpenSSL / system libs) for a vendorable CRAN build.
cms = { version = "0.2", features = ["builder"] }
x509-cert = { version = "0.2", features = ["builder"] }
der = { version = "0.7", features = ["oid"] }
spki = "0.7"
const-oid = { version = "0.9", features = ["db"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
signature = "2"
p12-keystore = "0.2"
rand = "0.8"
# ECDSA chain verification (P-256 / P-384), for ICP-Brasil EC chains.
p256 = "0.13"
p384 = "0.13"
# Ed25519 signing & verification (RFC 8419 in CMS).
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
ed25519 = "2"
# OCSP revocation (requests + response parsing).
x509-ocsp = { version = "0.2", features = ["builder"] }
sha1 = { version = "0.10", features = ["oid"] }
# Optional: HTTPS for TSA / CRL endpoints (rustls). Enabled by the signer crate.
ureq = { version = "3", optional = true }

[features]
default = []
https = ["dep:ureq"]
